[project]
name = "el-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "keras>=3.11.1",
    "matplotlib>=3.10.5",
    "numpy>=2.1.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
